<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingTop="5dp"
    android:paddingEnd="5dp"
    android:paddingRight="5dp"
    android:paddingBottom="5dp"
    android:textAlignment="textStart"
    android:textDirection="firstStrongRtl"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BCE12A64"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="-191dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/DescriptionLogo"
            android:paddingStart="16dp"
            android:paddingTop="5dp"
            android:paddingEnd="16dp"
            app:srcCompat="@drawable/dicee_logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textAlignment="viewStart"
            android:textDirection="locale">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:text="@string/Text2"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textDirection="locale"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/computer_dice"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/dice"
                app:srcCompat="@drawable/dice5" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="655dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:text="@string/Text1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/user_dice"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/dice"
                app:srcCompat="@drawable/dice3" />

            <LinearLayout
                android:id="@+id/LinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.3" />

                <Button
                    android:id="@+id/High_Button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FF5722"
                    android:fontFamily="sans-serif-black"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/btn1"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/Low_Button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FF9800"
                    android:fontFamily="sans-serif-black"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/btn2"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/computer_win"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/output1"
                android:visibility="invisible"
                app:srcCompat="@drawable/computer" />

            <ImageView
                android:id="@+id/tie"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/output2"
                android:visibility="invisible"
                app:srcCompat="@drawable/tie" />

            <ImageView
                android:id="@+id/user_win"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/output3"
                android:visibility="invisible"
                app:srcCompat="@drawable/user" />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
